# color-extract

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
color-segment/: Cargo.toml  params.yaml
color-segment/src/: anime.rs  edge.rs  lib.rs  main.rs  params.rs  quantize.rs  refine.rs  region.rs
dct-extract/: Cargo.toml
dct-extract/src/: cluster_4d.rs  dct.rs  html.rs  img.rs  main.rs
dct-viz/: Cargo.toml
dct-viz/src/: main.rs
feature-fuse/: Cargo.toml  PARAMS_GUIDE.md  params.yaml
feature-fuse/src/: background.rs  dct.rs  dynamic_weights.rs  fusion.rs  gradient.rs  html.rs  image.rs  main.rs  params.rs  render.rs  residual.rs  segment_features.rs  spectral.rs
global-residual/: Cargo.toml
global-residual/src/: main.rs
img-compare/: Cargo.toml
img-compare/src/: main.rs
impression-color-extract/: Cargo.toml  params.yaml
impression-color-extract/src/: dct.rs  fusion.rs  gradient.rs  image.rs  main.rs  palette.rs  params.rs  partition.rs  render.rs  residual.rs  spectral.rs
lab-gradient/: Cargo.toml
lab-gradient/src/: main.rs
residual-viz/: Cargo.toml
residual-viz/src/: main.rs
spectral-residual/: Cargo.toml
spectral-residual/src/: main.rs
src/: colorspace.rs  html.rs  img.rs  main.rs  timing.rs
src/algorithms/: kmeans.rs  median_cut.rs  minibatch_kmeans.rs  mod.rs  octree.rs
