[workspace]
members = ["dct-extract", "lab-gradient", "dct-viz", "spectral-residual"]
resolver = "2"

[package]
name = "color-extract"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "rayon"] }
palette = "0.7"
linfa = "0.8"
linfa-clustering = "0.8"
ndarray = "0.16"
ndarray-rand = "0.15"
rayon = "1"
rand = "0.8"
rand_xoshiro = "0.6"
base64 = "0.22"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
